Fixed scrollbar in Articles column.

--- a/App/sass/style.sass
+++ b/App/sass/style.sass
@@ -160,8 +160,8 @@ input, textarea
 		-webkit-user-select: none
 
 	#articles
-		@include absolute(0,0,23px,0)
-		overflow: scroll
+		@include absolute(0,0,36px,0)
+		overflow-y: scroll
 		margin: 0
 		padding: 0
 
